# ReFerbIsh

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Notes.txt  README.md
Source/: CMakeLists.txt  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Utils.cpp  Utils.h
Source/Diffusion/: Allpass.h  Diffuser.h  Diffusion.cpp  Diffusion.h  DiffusionStep.cpp  DiffusionStep.h  DiffusionStep.tpp
Source/Feedback/: Feedback.cpp  Feedback.h  Feedback.tpp
Source/ParallelDiffusion/: parallel_schroeder_allpass.h  single_channel_schroeder_allpass.h
Source/Reverb/: Reverb.h
Source/Scheduler/: CMakeLists.txt  audio_child_thread.h  thread_scheduler.hpp  thread_scheduler.inl  thread_utilities.h
